cas docs